SVN
-------------------------------

XML:   Resolved issue CASTOR-1909 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Improved validation for global elements during XML schema processing 
       Details: http://jira.codehaus.org/browse/CASTOR-1909
       (Werner - 20070318)

XML:   Resolved issue CASTOR-1914 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Replaced custom java.util.Enumeration implementation with java.util.Iterator.
       Details: http://jira.codehaus.org/browse/CASTOR-1914
       (Werner - 20070316)

XML:   Resolved issue CASTOR-1911 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Improved and stream-lined public interface of XMLClassDescriptorResolver.
       Details: http://jira.codehaus.org/browse/CASTOR-1911
       (Werner - 20070316)

XML:   Resolved issue CASTOR-1910 using contribution from Steven Dolg [stevendolg@gmx.at]
       Fixed problem with (incorrectly) caching class descriptors in XMLClassDescriptorResolver
       Details: http://jira.codehaus.org/browse/CASTOR-1910
       (Werner - 20070316)

Gen:   Resolved issue CASTOR-1905 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed bug in string normalization during code generation.
       Details: http://jira.codehaus.org/browse/CASTOR-1905
       (Werner - 20070314)

Gen:   Resolved issue CASTOR-1897 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added documentation for 'org.exolab.castor.builder.automaticConflictResolution' property
       Details: http://jira.codehaus.org/browse/CASTOR-1897
       (Werner - 20070313)

Gen:   Resolved issue CASTOR-1899 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem in ElementDecl.getSubstitutionGroup() related to global element references.
       Details: http://jira.codehaus.org/browse/CASTOR-1899
       (Werner - 20070313)
