@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1900 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem with choices during automatic name conflict resolution.
+       Details: http://jira.codehaus.org/browse/CASTOR-1900
+       (Werner - 20070319)
+
 XML:   Resolved issue CASTOR-1909 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Improved validation for global elements during XML schema processing 
        Details: http://jira.codehaus.org/browse/CASTOR-1909
